--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "radix64-encoding"]
 	path = radix64-encoding
 	url = https://github.com/fabiospampinato/radix64-encoding.git
+[submodule "hex-encoding"]
+	path = hex-encoding
+	url = https://github.com/fabiospampinato/hex-encoding.git
