--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "crypto-random-bigint"]
 	path = crypto-random-bigint
 	url = https://github.com/fabiospampinato/crypto-random-bigint.git
+[submodule "crypto-random-hexadecimal"]
+	path = crypto-random-hexadecimal
+	url = https://github.com/fabiospampinato/crypto-random-hexadecimal.git
