--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "crypto-random-in-range"]
 	path = crypto-random-in-range
 	url = https://github.com/fabiospampinato/crypto-random-in-range.git
+[submodule "uint8-to-hex"]
+	path = uint8-to-hex
+	url = https://github.com/fabiospampinato/uint8-to-hex.git
