--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "crypto-xxhash-64"]
 	path = crypto-xxhash-64
 	url = https://github.com/fabiospampinato/crypto-xxhash-64.git
+[submodule "crypto-pbkdf2-hmac"]
+	path = crypto-pbkdf2-hmac
+	url = https://github.com/fabiospampinato/crypto-pbkdf2-hmac.git
