--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "crypto-puzzle"]
 	path = crypto-puzzle
 	url = https://github.com/fabiospampinato/crypto-puzzle.git
+[submodule "when-exit"]
+	path = when-exit
+	url = https://github.com/fabiospampinato/when-exit.git
