--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "detect-eol"]
 	path = detect-eol
 	url = https://github.com/fabiospampinato/detect-eol.git
+[submodule "mime-standard"]
+	path = mime-standard
+	url = https://github.com/fabiospampinato/mime-standard.git
