--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "tiny-filename"]
 	path = tiny-filename
 	url = https://github.com/fabiospampinato/tiny-filename.git
+[submodule "find-up-json"]
+	path = find-up-json
+	url = https://github.com/fabiospampinato/find-up-json.git
