--- a/.gitmodules
+++ b/.gitmodules
@@ -181,3 +181,6 @@
 [submodule "plain-object-is-empty"]
 	path = plain-object-is-empty
 	url = https://github.com/fabiospampinato/plain-object-is-empty.git
+[submodule "plain-object-clone"]
+	path = plain-object-clone
+	url = https://github.com/fabiospampinato/plain-object-clone.git
