--- a/.gitmodules
+++ b/.gitmodules
@@ -1,312 +1,3 @@
-[submodule "tiny-colors"]
-	path = tiny-colors
-	url = https://github.com/fabiospampinato/tiny-colors.git
-[submodule "tiny-divider"]
-	path = tiny-divider
-	url = https://github.com/fabiospampinato/tiny-divider.git
-[submodule "is"]
-	path = is
-	url = https://github.com/fabiospampinato/is.git
-[submodule "string-from-charcodes"]
-	path = string-from-charcodes
-	url = https://github.com/fabiospampinato/string-from-charcodes.git
-[submodule "uint8-encoding"]
-	path = uint8-encoding
-	url = https://github.com/fabiospampinato/uint8-encoding.git
-[submodule "utf16le-encoding"]
-	path = utf16le-encoding
-	url = https://github.com/fabiospampinato/utf16le-encoding.git
-[submodule "radix64-encoding"]
-	path = radix64-encoding
-	url = https://github.com/fabiospampinato/radix64-encoding.git
-[submodule "hex-encoding"]
-	path = hex-encoding
-	url = https://github.com/fabiospampinato/hex-encoding.git
-[submodule "base128-encoding"]
-	path = base128-encoding
-	url = https://github.com/fabiospampinato/base128-encoding.git
-[submodule "base256-encoding"]
-	path = base256-encoding
-	url = https://github.com/fabiospampinato/base256-encoding.git
-[submodule "decode-base64"]
-	path = decode-base64
-	url = https://github.com/fabiospampinato/decode-base64.git
-[submodule "event-loop-yielder"]
-	path = event-loop-yielder
-	url = https://github.com/fabiospampinato/event-loop-yielder.git
-[submodule "call-chainer"]
-	path = call-chainer
-	url = https://github.com/fabiospampinato/call-chainer.git
-[submodule "tiny-webcrypto"]
-	path = tiny-webcrypto
-	url = https://github.com/fabiospampinato/tiny-webcrypto.git
-[submodule "crypto-random-bigint"]
-	path = crypto-random-bigint
-	url = https://github.com/fabiospampinato/crypto-random-bigint.git
-[submodule "crypto-random-hexadecimal"]
-	path = crypto-random-hexadecimal
-	url = https://github.com/fabiospampinato/crypto-random-hexadecimal.git
-[submodule "crypto-random-uint8"]
-	path = crypto-random-uint8
-	url = https://github.com/fabiospampinato/crypto-random-uint8.git
-[submodule "crypto-random-in-range"]
-	path = crypto-random-in-range
-	url = https://github.com/fabiospampinato/crypto-random-in-range.git
-[submodule "uint8-to-hex"]
-	path = uint8-to-hex
-	url = https://github.com/fabiospampinato/uint8-to-hex.git
-[submodule "crypto-sha"]
-	path = crypto-sha
-	url = https://github.com/fabiospampinato/crypto-sha.git
-[submodule "once"]
-	path = once
-	url = https://github.com/fabiospampinato/once.git
-[submodule "crypto-xxhash-64"]
-	path = crypto-xxhash-64
-	url = https://github.com/fabiospampinato/crypto-xxhash-64.git
-[submodule "crypto-pbkdf2-hmac"]
-	path = crypto-pbkdf2-hmac
-	url = https://github.com/fabiospampinato/crypto-pbkdf2-hmac.git
-[submodule "crypto-puzzle"]
-	path = crypto-puzzle
-	url = https://github.com/fabiospampinato/crypto-puzzle.git
-[submodule "when-exit"]
-	path = when-exit
-	url = https://github.com/fabiospampinato/when-exit.git
-[submodule "tiny-cursor"]
-	path = tiny-cursor
-	url = https://github.com/fabiospampinato/tiny-cursor.git
-[submodule "tiny-diff"]
-	path = tiny-diff
-	url = https://github.com/fabiospampinato/tiny-diff.git
-[submodule "noop-tag"]
-	path = noop-tag
-	url = https://github.com/fabiospampinato/noop-tag.git
-[submodule "call-hooks"]
-	path = call-hooks
-	url = https://github.com/fabiospampinato/call-hooks.git
-[submodule "call-spy"]
-	path = call-spy
-	url = https://github.com/fabiospampinato/call-spy.git
-[submodule "critically"]
-	path = critically
-	url = https://github.com/fabiospampinato/critically.git
-[submodule "detect-eol"]
-	path = detect-eol
-	url = https://github.com/fabiospampinato/detect-eol.git
-[submodule "mime-standard"]
-	path = mime-standard
-	url = https://github.com/fabiospampinato/mime-standard.git
-[submodule "mime2ext"]
-	path = mime2ext
-	url = https://github.com/fabiospampinato/mime2ext.git
-[submodule "ext2mime"]
-	path = ext2mime
-	url = https://github.com/fabiospampinato/ext2mime.git
-[submodule "linkify-it-tlds"]
-	path = linkify-it-tlds
-	url = https://github.com/fabiospampinato/linkify-it-tlds.git
-[submodule "special-tlds"]
-	path = special-tlds
-	url = https://github.com/fabiospampinato/special-tlds.git
-[submodule "stdin-blocker"]
-	path = stdin-blocker
-	url = https://github.com/fabiospampinato/stdin-blocker.git
-[submodule "string-indexes"]
-	path = string-indexes
-	url = https://github.com/fabiospampinato/string-indexes.git
-[submodule "css-simple-minifier"]
-	path = css-simple-minifier
-	url = https://github.com/fabiospampinato/css-simple-minifier.git
-[submodule "css-simple-parser"]
-	path = css-simple-parser
-	url = https://github.com/fabiospampinato/css-simple-parser.git
-[submodule "css-flatten"]
-	path = css-flatten
-	url = https://github.com/fabiospampinato/css-flatten.git
-[submodule "khroma"]
-	path = khroma
-	url = https://github.com/fabiospampinato/khroma.git
-[submodule "sanitize-basename"]
-	path = sanitize-basename
-	url = https://github.com/fabiospampinato/sanitize-basename.git
-[submodule "unsanitize-basename"]
-	path = unsanitize-basename
-	url = https://github.com/fabiospampinato/unsanitize-basename.git
-[submodule "promise-resolve-timeout"]
-	path = promise-resolve-timeout
-	url = https://github.com/fabiospampinato/promise-resolve-timeout.git
-[submodule "promise-make-naked"]
-	path = promise-make-naked
-	url = https://github.com/fabiospampinato/promise-make-naked.git
-[submodule "promise-concurrency-limiter"]
-	path = promise-concurrency-limiter
-	url = https://github.com/fabiospampinato/promise-concurrency-limiter.git
-[submodule "tiny-dirname"]
-	path = tiny-dirname
-	url = https://github.com/fabiospampinato/tiny-dirname.git
-[submodule "tiny-filename"]
-	path = tiny-filename
-	url = https://github.com/fabiospampinato/tiny-filename.git
-[submodule "find-up-json"]
-	path = find-up-json
-	url = https://github.com/fabiospampinato/find-up-json.git
-[submodule "json-clone-deep"]
-	path = json-clone-deep
-	url = https://github.com/fabiospampinato/json-clone-deep.git
-[submodule "pikchr-wasm"]
-	path = pikchr-wasm
-	url = https://github.com/fabiospampinato/pikchr-wasm.git
-[submodule "graphviz-wasm"]
-	path = graphviz-wasm
-	url = https://github.com/fabiospampinato/graphviz-wasm.git
-[submodule "zstandard-wasm"]
-	path = zstandard-wasm
-	url = https://github.com/fabiospampinato/zstandard-wasm.git
-[submodule "entities-dom-decode"]
-	path = entities-dom-decode
-	url = https://github.com/fabiospampinato/entities-dom-decode.git
-[submodule "node-buffer-encoding"]
-	path = node-buffer-encoding
-	url = https://github.com/fabiospampinato/node-buffer-encoding.git
-[submodule "buffer2uint8"]
-	path = buffer2uint8
-	url = https://github.com/fabiospampinato/buffer2uint8.git
-[submodule "tiny-readdir"]
-	path = tiny-readdir
-	url = https://github.com/fabiospampinato/tiny-readdir.git
-[submodule "aborter"]
-	path = aborter
+[submodule "repositories/aborter"]
+	path = repositories/aborter
 	url = https://github.com/fabiospampinato/aborter.git
-[submodule "plain-object-is-empty"]
-	path = plain-object-is-empty
-	url = https://github.com/fabiospampinato/plain-object-is-empty.git
-[submodule "plain-object-clone"]
-	path = plain-object-clone
-	url = https://github.com/fabiospampinato/plain-object-clone.git
-[submodule "plain-object-merge"]
-	path = plain-object-merge
-	url = https://github.com/fabiospampinato/plain-object-merge.git
-[submodule "plain-object-is-equal"]
-	path = plain-object-is-equal
-	url = https://github.com/fabiospampinato/plain-object-is-equal.git
-[submodule "path-prop"]
-	path = path-prop
-	url = https://github.com/fabiospampinato/path-prop.git
-[submodule "ua2os"]
-	path = ua2os
-	url = https://github.com/fabiospampinato/ua2os.git
-[submodule "nanopath"]
-	path = nanopath
-	url = https://github.com/fabiospampinato/nanopath.git
-[submodule "infinity-map"]
-	path = infinity-map
-	url = https://github.com/fabiospampinato/infinity-map.git
-[submodule "infinity-set"]
-	path = infinity-set
-	url = https://github.com/fabiospampinato/infinity-set.git
-[submodule "bob-wasm"]
-	path = bob-wasm
-	url = https://github.com/fabiospampinato/bob-wasm.git
-[submodule "string-matches"]
-	path = string-matches
-	url = https://github.com/fabiospampinato/string-matches.git
-[submodule "string-matches-generator"]
-	path = string-matches-generator
-	url = https://github.com/fabiospampinato/string-matches-generator.git
-[submodule "react-use-mounted"]
-	path = react-use-mounted
-	url = https://github.com/fabiospampinato/react-use-mounted.git
-[submodule "react-use-previous"]
-	path = react-use-previous
-	url = https://github.com/fabiospampinato/react-use-previous.git
-[submodule "tiny-buffer"]
-	path = tiny-buffer
-	url = https://github.com/fabiospampinato/tiny-buffer.git
-[submodule "is-numeric"]
-	path = is-numeric
-	url = https://github.com/fabiospampinato/is-numeric.git
-[submodule "yinyang-clock"]
-	path = yinyang-clock
-	url = https://github.com/fabiospampinato/yinyang-clock.git
-[submodule "string-escape-regex"]
-	path = string-escape-regex
-	url = https://github.com/fabiospampinato/string-escape-regex.git
-[submodule "string-replace-all"]
-	path = string-replace-all
-	url = https://github.com/fabiospampinato/string-replace-all.git
-[submodule "oby"]
-	path = oby
-	url = https://github.com/fabiospampinato/oby.git
-[submodule "voby"]
-	path = voby
-	url = https://github.com/fabiospampinato/voby.git
-[submodule "are-shallow-equal"]
-	path = are-shallow-equal
-	url = https://github.com/fabiospampinato/are-shallow-equal.git
-[submodule "ansi-truncate"]
-	path = ansi-truncate
-	url = https://github.com/fabiospampinato/ansi-truncate.git
-[submodule "tiny-truncate"]
-	path = tiny-truncate
-	url = https://github.com/fabiospampinato/tiny-truncate.git
-[submodule "tiny-spinner"]
-	path = tiny-spinner
-	url = https://github.com/fabiospampinato/tiny-spinner.git
-[submodule "prompts-helpers"]
-	path = prompts-helpers
-	url = https://github.com/fabiospampinato/prompts-helpers.git
-[submodule "base256-archive"]
-	path = base256-archive
-	url = https://github.com/fabiospampinato/base256-archive.git
-[submodule "tryloop"]
-	path = tryloop
-	url = https://github.com/fabiospampinato/tryloop.git
-[submodule "entities-standard"]
-	path = entities-standard
-	url = https://github.com/fabiospampinato/entities-standard.git
-[submodule "entities-decode"]
-	path = entities-decode
-	url = https://github.com/fabiospampinato/entities-decode.git
-[submodule "tiny-sqlite3"]
-	path = tiny-sqlite3
-	url = https://github.com/fabiospampinato/tiny-sqlite3.git
-[submodule "stubborn-fs"]
-	path = stubborn-fs
-	url = https://github.com/fabiospampinato/stubborn-fs.git
-[submodule "uint-rng"]
-	path = uint-rng
-	url = https://github.com/fabiospampinato/uint-rng.git
-[submodule "worktank"]
-	path = worktank
-	url = https://github.com/fabiospampinato/worktank.git
-[submodule "import-fool-webpack"]
-	path = import-fool-webpack
-	url = https://github.com/fabiospampinato/import-fool-webpack.git
-[submodule "zeptoid"]
-	path = zeptoid
-	url = https://github.com/fabiospampinato/zeptoid.git
-[submodule "webworker-shim"]
-	path = webworker-shim
-	url = https://github.com/fabiospampinato/webworker-shim.git
-[submodule "worktank-esbuild-plugin"]
-	path = worktank-esbuild-plugin
-	url = https://github.com/fabiospampinato/worktank-esbuild-plugin.git
-[submodule "worktank-vite-plugin"]
-	path = worktank-vite-plugin
-	url = https://github.com/fabiospampinato/worktank-vite-plugin.git
-[submodule "conf-merge"]
-	path = conf-merge
-	url = https://github.com/fabiospampinato/conf-merge.git
-[submodule "tiny-json-body-parser"]
-	path = tiny-json-body-parser
-	url = https://github.com/fabiospampinato/tiny-json-body-parser.git
-[submodule "tiny-urlencoded-body-parser"]
-	path = tiny-urlencoded-body-parser
-	url = https://github.com/fabiospampinato/tiny-urlencoded-body-parser.git
-[submodule "js-simple-mangler"]
-	path = js-simple-mangler
-	url = https://github.com/fabiospampinato/js-simple-mangler.git
-[submodule "fetch-shim"]
-	path = fetch-shim
-	url = https://github.com/fabiospampinato/fetch-shim.git
